Memodifikasi UI dan Mempercantik UI Booking, Menambahkan Warna, Menambahkan Style Text.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="purple">#AB6DFD</color>
     <color name="gray_text">#B3B4B8</color>
     <color name="black_second">#595959</color>
+    <color name="bg_gray">#F1F1F1</color>
 </resources>
