--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,6 +28,14 @@
         <item name="android:textColor">@color/gray_text</item>
     </style>
 
+    <style name="TextSubHead">
+        <item name="font">@font/roboto</item>
+        <item name="fontFamily">@font/roboto</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="lineHeight">24dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="ButtonLogin" parent="ThemeOverlay.Material3.Button">
         <item name="backgroundTint">@color/purple</item>
         <item name="android:radius">10dp</item>
