--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    
-    
+
+    <color name="border_grey">#D1D3D8</color>
+    <color name="grey">#FAFAFA</color>
     <color name="blue">#676FC4</color>
     <color name="purple">#AB6DFD</color>
     <color name="gray_text">#B3B4B8</color>
