Menambahkan layout teknisi, custom background, dan warna.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="gray_text">#B3B4B8</color>
     <color name="black_second">#595959</color>
     <color name="bg_gray">#F1F1F1</color>
+    <color name="yellow">#FEB700</color>
 </resources>
